<resources>
    <string name="app_name">NetMBuddy</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="loading">Loading</string>
    <string name="deleting">Deleting</string>
    <string name="adding">Adding</string>
    <string name="moving">Moving</string>
    <string name="copying">Copying</string>
    <string name="error">Error</string>
    <string name="buffering">Buffering</string>
    <string name="preparing">Preparing</string>
    <string name="searching">Searching</string>
    <string name="keyword">Search word</string>
    <string name="channel">Channel</string>
    <string name="playlist">Playlist</string>
    <string name="volume">Volume</string>
    <string name="database">Database</string>
    <string name="export">Export</string>
    <string name="import_">Import</string>
    <string name="merge">Merge</string>
    <string name="verylow">Very low</string>
    <string name="low">Low</string>
    <string name="midlow">Mid low</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="veryhigh">Very high</string>
    <string name="done">Done</string>
    <string name="autostop">Auto-stop</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="duplication">Duplication</string>
    <string name="license">License</string>
    <string name="seconds">sec.</string>
    <string name="minutes">min.</string>
    <string name="unknown">Unknown</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="beginning">Beginning</string>
    <string name="end">End</string>
    <string name="both">Both</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="youtube_id">Youtube Id</string>
    <string name="enter_keyword">Enter search keyword</string>
    <string name="new_search">New search</string>
    <string name="detail_list">Detail list</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="new_playlist">New playlist</string>
    <string name="add_to">Add to</string>
    <string name="copy_to">Copy to</string>
    <string name="move_to">Move to</string>
    <string name="enter_playlist_title">Enter playlist title</string>
    <string name="recently_played">Recently played</string>
    <string name="set_to_plthumbnail">Set as playlist icon</string>
    <string name="dbmore">Database ▶</string>
    <string name="ytsearch">Search Youtube</string>
    <string name="ytsearchmore">Search Youtube ▶</string>
    <string name="app_info">App. information</string>
    <string name="feedback">Feedback</string>
    <string name="choose_app">Choose App.</string>
    <string name="play_video">Play video</string>
    <string name="channel_videos">Channel videos</string>
    <string name="videos_of_same_channel">Videos of same channel</string>
    <string name="importing_db">Importing DB</string>
    <string name="merging_db">Merging DB</string>
    <string name="exporting_db">Exporting DB</string>
    <string name="merging_playlist">Merging playlist</string>
    <string name="append_to_playq">Append to queue</string>
    <string name="time10m">10 minutes</string>
    <string name="time20m">20 minutes</string>
    <string name="time30m">30 minutes</string>
    <string name="time1h">1 hour</string>
    <string name="time2h">2 hours</string>
    <string name="set_video_quality">Set video quality</string>
    <string name="detail_info">Detail info.</string>
    <string name="playback_time">Playback time</string>
    <string name="time_added">Time added</string>
    <string name="time_last_played">Time last played</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="import_share">Import shared data</string>
    <string name="importing_share">Importing shared data</string>
    <string name="share_via_email">Share via Email</string>
    <string name="player_extra_control_title">For current playing music</string>
    <string name="not_played_yet">Not played yet</string>
    <string name="set_bookmark">Set bookmark</string>
    <string name="enter_bookmark_name">Enter bookmark name</string>
    <string name="search_similar_titles">Search similar titles</string>
    <string name="delete_invalid_videos">Remove invalid videos</string>
    <string name="tts_title_head_pre">Next video is</string>
    <string name="tts_title_head_post"></string>
    <string name="tts_title_tail_pre">Previous video was</string>
    <string name="tts_title_tail_post"></string>
    <string name="share_pl_attachment">PlaylistShareData</string>
    <string name="share_pl_email_subject">NetMBuddy Playlist Share</string>
    <string name="share_pl_email_text">Please open attachement with NetMBuddy to import shared playlist.</string>
    <string name="pref_cat_tuning">App. tuning</string>
    <string name="pref_mem_consumption">Memory consumption</string>
    <string name="pref_mem_consumption_desc">Set to \'high\' for faster but high memory usage.</string>
    <string name="pref_cat_operation">Playing music</string>
    <string name="pref_shuffle">Shuffle</string>
    <string name="pref_shuffle_desc">Play musics in random order.</string>
    <string name="pref_repeat">Repeat</string>
    <string name="pref_repeat_desc">Play musics repeatedly.</string>
    <string name="pref_quality">Media quality</string>
    <string name="pref_quality_desc">Normal is recommended for musics. Some videos doesn\'t support some of listed qualities and best-fit will be selected.</string>
    <string name="pref_use_wifi_only">Wifi only</string>
    <string name="pref_use_wifi_only_desc">Use wifi only as network access</string>
    <string name="pref_title_tts">Title to speech</string>
    <string name="pref_title_tts_desc">Video title is read as speech before/after video playing.</string>
    <string name="pref_cat_ux">User experience</string>
    <string name="pref_lockscreen">Player on lockScreen</string>
    <string name="pref_lockscreen_desc">Enable screen for controlling player on lockscreen</string>
    <string name="pref_stop_on_back">Stop-on-back</string>
    <string name="pref_stop_on_back_desc">Stop playing on exiting App. via back-button.</string>
    <string name="pref_cat_report">Report</string>
    <string name="pref_err_report">Err report</string>
    <string name="pref_err_report_desc">Detail error information can be sent to developer.</string>
    <string name="pref_cat_algorithm">Algorithm</string>
    <string name="pref_title_similarity_threshold">Title similarity threshold</string>
    <string name="pref_title_similarity_threshold_desc">Decides threshold of similar-title-searching. Higher value -> more strict but better performance.</string>
    <string name="guide_title_first_playlist">Making my first playlist.</string>
    <string name="guide_desc_first_playlist">Touching this icon to search Youbute with keywords\nThen, do long-touch one of list-item to make new playlist and add the item to the playlist.</string>
    <string name="guide_title_tool_buttons">Tool buttons.</string>
    <string name="guide_desc_playall">Plays all registered musics regardless of playlist.</string>
    <string name="guide_desc_recently_played">Lists recently played musics.</string>
    <string name="guide_desc_dbsearch">Searchs musics registered at local playlist with keywords.</string>
    <string name="guide_desc_ytsearch">Searchs Youbute with keywords to register new music to local playlist.\nRegistered musics and not-registered musics are displayed with gray and yellow text, respectively. </string>
    <string name="guide_desc_preference">Sets preference.</string>
    <string name="guide_desc_more">Shows sub-menus those are not used often.</string>
    <string name="guide_title_playlist_buttons">Tool buttons of each playlist.</string>
    <string name="guide_desc_playlist_row">Play all musics belonging to the playlist by touching row at the list.</string>
    <string name="guide_desc_detaillist">Lists all musics belongs to the playlist.</string>
    <string name="msg_init_app">
Initializing App.\n
It may takes long time(up to several minutes) in case that:\n
  - DB is very big\n
  - First run after updating App.
    </string>
    <string name="msg_not_implemented">Not implemented yet.</string>
    <string name="msg_ytplayer_err">Fail in playing.</string>
    <string name="msg_initialize_app">Preparing application.</string>
    <string name="msg_unknown_format">Video format is unknown.</string>
    <string name="msg_no_thumbnail">Thumbnail is not loaded yet.\nTry again after loading thumbnail is done.</string>
    <string name="msg_existing_playlist">Playlist name is already in used.</string>
    <string name="msg_existing_muisc">Same music is already in the playlist.</string>
    <string name="msg_wait_cancel">Waiting for canceling.</string>
    <string name="msg_preparing_mplayer">Preparing for playing musics.</string>
    <string name="msg_playing_done">Playing is done.</string>
    <string name="msg_playing_stopped">Playing is stopped.</string>
    <string name="msg_playing_err_unknown">Unknown error during playing.</string>
    <string name="msg_empty_playlist">Playlist is empty.</string>
    <string name="msg_fail_find_app">Fail in finding appropriate application.</string>
    <string name="msg_fail_access_exdb">Fail in accessing external database file.</string>
    <string name="msg_delete_musics">Delete from current playlist.</string>
    <string name="msg_delete_musics_completely">Delete from all playlists.</string>
    <string name="msg_autostop_not_allowed">Fails to set auto-stop. Player is not active. Auto-stop can be set only on current playing session.</string>
    <string name="msg_no_all_thumbnail">Some thumbnails are not loaded yet.\nTry again after loading all thumbnail is done.</string>
    <string name="msg_fails_to_add">Adding fails for some items.</string>
    <string name="msg_no_items_selected">No items selected.</string>
    <string name="msg_post_changing_video_quality">Main media quality setting is changed too, accordingly.</string>
    <string name="msg_appended_to_playq">appended to play queue.</string>
    <string name="msg_play_all_musics">All musics are played.</string>
    <string name="msg_search_history_cleared">Clearing search history is done.</string>
    <string name="msg_delete_playlist">Delete the playlist.</string>
    <string name="msg_fail_to_access_data">Fail to access data.</string>
    <string name="msg_confirm_import_share">Do you want to import this shared data?</string>
    <string name="msg_warn_background_not_allowed">It is NOT allowed running background. Note that moving background stops current task.</string>
    <string name="msg_forbidden_characters">Following characters are not allowed.</string>
    <string name="msg_fail_set_bookmark">Setting bookmark fails.</string>
    <string name="msg_fail_seek_to_bookmark">Seeking to bookmark fails. Seeking to bookmark is only allowed for current playing music.</string>
    <string name="msg_empty_bookmarks">There is no bookmark.</string>
    <string name="msg_no_similar_titles">There is no similar video title in local playlist.</string>
    <string name="msg_couldnt_use_title_tts">Title TTS is not available.</string>
    <string name="msg_delete_invalid_videos">It is checked that video is available on Youtube.\nThis uses network resource and may take long time.</string>
    <string name="msg_invalid_videos_deleted">invalid videos are deleted.</string>
    <string name="err_no_err">Success.</string>
</resources>