<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <!-- ******************************************************** -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/title_text_color_new"
            android:text="@string/guide_title_first_playlist"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="@dimen/toolbtn_width"
                android:layout_height="@dimen/toolbtn_height"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_ytsearch_up"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:minHeight="@dimen/toolbtn_height"
                android:gravity="center_vertical"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/desc_text_color"
                android:text="@string/guide_desc_first_playlist"
                />
        </LinearLayout>
    
        <!-- ******************************************************** -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_intercat_margin"
            android:gravity="center"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/title_text_color_new"
            android:text="@string/guide_title_tool_buttons"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="@dimen/toolbtn_width"
                android:layout_height="@dimen/toolbtn_height"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_playall_up"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:minHeight="@dimen/toolbtn_height"
                android:gravity="center_vertical"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/desc_text_color"
                android:text="@string/guide_desc_playall"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_interitem_margin"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="@dimen/toolbtn_width"
                android:layout_height="@dimen/toolbtn_height"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_recently_played_up"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:minHeight="@dimen/toolbtn_height"
                android:gravity="center_vertical"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/desc_text_color"
                android:text="@string/guide_desc_recently_played"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_interitem_margin"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="@dimen/toolbtn_width"
                android:layout_height="@dimen/toolbtn_height"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_search_list_up"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:minHeight="@dimen/toolbtn_height"
                android:gravity="center_vertical"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/desc_text_color"
                android:text="@string/guide_desc_dbsearch"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_interitem_margin"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="@dimen/toolbtn_width"
                android:layout_height="@dimen/toolbtn_height"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_ytsearch_up"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:minHeight="@dimen/toolbtn_height"
                android:gravity="center_vertical"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/desc_text_color"
                android:text="@string/guide_desc_ytsearch"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_interitem_margin"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="@dimen/toolbtn_width"
                android:layout_height="@dimen/toolbtn_height"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_preferences_up"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:minHeight="@dimen/toolbtn_height"
                android:gravity="center_vertical"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/desc_text_color"
                android:text="@string/guide_desc_preference"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_interitem_margin"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="@dimen/toolbtn_width"
                android:layout_height="@dimen/toolbtn_height"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_more_up"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:minHeight="@dimen/toolbtn_height"
                android:gravity="center_vertical"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/desc_text_color"
                android:text="@string/guide_desc_more"
                />
        </LinearLayout>
    
        <!-- ******************************************************** -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_intercat_margin"
            android:gravity="center"
            android:textSize="@dimen/large_text_size"
            android:textColor="@color/title_text_color_new"
            android:text="@string/guide_title_playlist_buttons"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:minHeight="@dimen/toolbtn_height"
            android:gravity="center_vertical"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/desc_text_color"
            android:text="@string/guide_desc_playlist_row"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide_interitem_margin"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="@dimen/toolbtn_width"
                android:layout_height="@dimen/toolbtn_height"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_list_up"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:minHeight="@dimen/toolbtn_height"
                android:gravity="center_vertical"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/desc_text_color"
                android:text="@string/guide_desc_detaillist"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
